# tauri-plugin-clipboard-next

./: .gitignore  .release-it.json  .release-it.ts  Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.rs  package.json  pnpm-lock.yaml
examples/tauri-app/: index.html  package.json  pnpm-lock.yaml  vite.config.js
examples/tauri-app/src/: App.tsx  main.tsx
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: commands.rs  lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_file_path.toml  get_text.toml  has_file.toml  start_watch.toml  stop_watch.toml
permissions/schemas/: schema.json
scripts/: .release-it.ts  publish-cargo.cjs  sync-version.cjs  update-version.cjs
src/: commands.rs  constants.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  utils.rs
